# multiobjective-lp

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE.md  README.md  index.html  objects.inv  pyproject.toml  requirements.txt
core/: README.md  pyproject.toml
core/src/model/: multi_objective_lp.py
core/src/multiobjective-lp/model/: multi_objective_lp.py
core/src/multiobjective_lp/model/: multi_objective_lp.py
core/src/muoblp/model/: multi_objective_lp.py
core/src/muoblp/utils/: lpReaderUtils.py
core/src/utils/: lpReaderUtils.py
experiments/: .coverage  README.md  analyzer.py  analyzerRunner.py  experiment-setup.md  experimentRunner.py  problemRunner.py  pyproject.toml  resultAnalyzer.py  runner.py
experiments/config/: logging_config.yaml
experiments/helpers/analyzers/: metrics.py  model.py
experiments/helpers/runners/: model.py  solverStrategy.py  sourceStrategy.py
experiments/helpers/runners/solvers/: MethodOfEqualSharesAdd1Solver.py  MethodOfEqualSharesSolver.py  SummedObjectivesLpSolver.py  mes.cpp  pabulib_parser.py
experiments/helpers/transformers/: pabutoolsToMoLp.py  pabutoolsUtils.py  pabutools_transformer.py
experiments/helpers/utils/: enhanceFromSolverResult.py
experiments/resources/analyzer-results/greedy-phragmen-grouped/: metrics-greedy-phragmen-grouped.json
experiments/resources/analyzer-results/greedy-phragmen-single/: metrics-greedy-phragmen-single.json
experiments/resources/analyzer-results/greedy-phragmen-single-all/: metrics-greedy-phragmen-single-all.json
experiments/resources/experiment-results/single-run/: meta_02-24T23-04-59_643c_warszawa_2024_MES.json  meta_02-24T23-05-09_f8b9_warszawa_2024_MES_CONSTRAINT.json  meta_02-24T23-14-21_739e_warszawa_2024_MES_ADD1.json
experiments/resources/experiment-results/single-run-v2/: meta_02-26T12-57-28_c8fd_warszawa_2024_MES_CONSTRAINT.json
experiments/resources/input/analyzer-config/: greedy-phragmen-grouped.jsonc  greedy-phragmen-single-all.jsonc  greedy-phragmen-single-auto.jsonc  greedy-phragmen-single.jsonc  sample-analysis.json  sample-analysis.jsonc  single-analysis.json  single-analysis.jsonc
experiments/resources/input/config/: sample-constraints.json
experiments/resources/input/constraint-config/: no-constraints.jsonmeta_02-23T15-54-23_09ff_warszawa_2023_MES.json  sample-constraints.json  sample-constraints.jsonc
experiments/resources/input/experiment-config/: greedy-phragmen-grouped.jsonc  greedy-phragmen-single-all.jsonc  greedy-phragmen-single-auto.jsonc  greedy-phragmen-single.jsonc  mes-experiment.json  mes-experiment.jsonc  phragmen-by-district.jsonc  sample-experiment.json  single-instance-experiment.json  single-instance-experiment.jsonc
experiments/sample-experiment/: README.md  analyze.sh  experiment-config.json  run.sh  sample-analysis-config.json
experiments/sample-experiment/input/krakow_2024/: link.txt  poland_krakow_2024_.pb  poland_krakow_2024_bienczyce.pb  poland_krakow_2024_biezanow-prokocim.pb  poland_krakow_2024_bronowice.pb  poland_krakow_2024_czyzyny.pb  poland_krakow_2024_debniki.pb  poland_krakow_2024_grzegorzki.pb  poland_krakow_2024_krowodrza.pb  poland_krakow_2024_lagiewniki-borek-falecki.pb  poland_krakow_2024_mistrzejowice.pb  poland_krakow_2024_nowa-huta.pb  poland_krakow_2024_podgorze-duchackie.pb  poland_krakow_2024_podgorze.pb  poland_krakow_2024_pradnik-bialy.pb  poland_krakow_2024_pradnik-czerwony.pb  poland_krakow_2024_stare-miasto.pb  poland_krakow_2024_swoszowice.pb  poland_krakow_2024_wzgorza-krzeslawickie.pb  poland_krakow_2024_zwierzyniec.pb
experiments/sample-experiment/input/warszawa_2024/: link.txt  poland_warszawa_2024_bemowo.pb  poland_warszawa_2024_bialoleka.pb  poland_warszawa_2024_mokotow.pb  poland_warszawa_2024_ochota.pb  poland_warszawa_2024_praga-polnoc.pb  poland_warszawa_2024_praga-poludnie.pb  poland_warszawa_2024_rembertow.pb  poland_warszawa_2024_srodmiescie.pb  poland_warszawa_2024_targowek.pb  poland_warszawa_2024_ursus.pb  poland_warszawa_2024_wawer.pb  poland_warszawa_2024_wesola.pb  poland_warszawa_2024_wilanow.pb  poland_warszawa_2024_wlochy.pb  poland_warszawa_2024_zoliborz.pb
experiments/sample-experiment/results/partial–sample-experiment/: meta_02-03T12-07-39_0ff4_krakow_2024_MES.json  meta_02-03T12-07-45_d757_warszawa_2024_MES.json  problem_02-03T12-07-39_0ff4_krakow_2024_MES.lp
experiments/sample-experiment/results/sample-analysis/: metrics-sample-experiment.json  metrics-sample-experiment.jsonc
experiments/sample-experiment/results/sample-experiment/: meta_01-21T19-34-50_5694_krakow_2024_MES.json  meta_01-21T19-34-56_c889_warszawa_2024_MES.json  meta_02-03T12-07-45_d757_warszawa_2024_MES.json
experiments/src/: aggregateGroupedResults.py  aggregateResults.py  analyzerRunner.py  experimentRunner.py  explore.ipynb  generateExperiment.py  generatePhargmenGreedyDistrictExperiment.py  problemRunner.py
experiments/src/helpers/analyzers/: analysis_table.py  metrics.py  model.py
experiments/src/helpers/runners/: model.py  solverStrategy.py  sourceStrategy.py
experiments/src/helpers/utils/: logger.py  (+3 more)
experiments/src/sample-experiment/: experiment-config.json  run.sh
experiments/tests/: conftest.py  test_ballot_strategies.py  test_constraint_computation.py  test_constraint_creation.py  test_pabutools_to_molp.py
experiments/tests/fixtures/: pabutools_factories.py
solvers/: README.md  prepare_bindings.sh  pyproject.toml
solvers/mes/: MethodOfEqualSharesSolver.py
solvers/mes_add1/: MethodOfEqualSharesAdd1Solver.py
solvers/mes_constrains/: MethodOfEqualSharesConstrainsSolver.py  utils.py
solvers/src/mes/: MethodOfEqualSharesSolver.py  python_mes.py
solvers/src/mes_add1/: MethodOfEqualSharesAdd1Solver.py
solvers/src/mes_constrains/: MethodOfEqualSharesConstrainsSolver.py  utils.py
solvers/src/muoblpsolvers/: common.py
solvers/src/summed/: SummedObjectivesLpSolver.py
solvers/summed/: SummedObjectivesLpSolver.py
solvers/tests/: conftest.py  test_common.py  test_greedy.py  test_mes_add1.py  test_mes_base.py
solvers/tests/fixtures/: pb_problems.py
(+88 files in other folders)
