[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multiobjective_lp"
version = "0.0.1"
description = "Implementation of multi objective linear programming module"
authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.11"
dependencies = [
    "PuLP==2.8.0",
]
[project.optional-dependencies]
dev = [
    "gmpy2==2.1.5",
    "pabutools==1.1.7",
    "pydantic==2.7.4",
]


[project.urls]
Homepage = "https://github.com/jasieksz/multiobjective-lp"

