[project]
version = "0.0.6"
name = "multiobjective-lp"
description = "Implementation of multi objective linear programming module"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11,<3.13"
dependencies = [
    "pulp == 2.9.0"
]

[project.urls]
repository = "https://github.com/jasieksz/multiobjective-lp"
documentation = "https://jasieksz.github.io/multiobjective-lp"


[tool.poetry]
packages = [{include = "multiobjective-lp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
