[project]
version = "0.0.1"
name = "multiobjective-lp-experiments"
description = "Experiments using multi objective linear programming solvers"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11,<3.13"
dependencies = [
    "pabutools (>=1.1.11,<2.0.0)"
]

[tool.poetry.dependencies]
multiobjective_lp = {version = "0.0.4", source = "test-pypi"}
multiobjective_lp-solvers = {path = "../solvers", develop = true}

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
