[project]
version = "0.0.1"
name = "multiobjective-lp-experiments"
description = "Experiments using multi objective linear programming solvers"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11,<3.13"

dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
pabutools = {version = "1.1.11"}
multiobjective-lp-solvers = {version = "0.0.4", source = "test"}
multiobjective-lp = {version = "0.0.6", source = "test"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
