[project]
version = "0.0.1"
name = "muoblpexp"
description = "Experiments using multi objective linear programming solvers"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11,<3.13"

dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
pabutools = {version = "1.2.2"}
muoblp = {version = "1.0.2"}
muoblpsolvers = {path = "../solvers", develop = true}
pandas = "2.3.1"
tabulate = "0.9.0"
pyyaml = "6.0.2"
python-json-logger = "3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
