[project]
version = "0.0.7"
name = "muoblpsolvers"
description = "Solvers for multi objective linear programming"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11"

dynamic = [ "dependencies" ]

[project.urls]
repository = "https://github.com/jasieksz/multiobjective-lp"
documentation = "https://jasieksz.github.io/multiobjective-lp"

[tool.poetry]
packages = [{include = "muoblpsolvers", from = "src"}]

[tool.poetry.dependencies]
muoblp = "1.0.0"

[build-system]
requires = ["scikit-build-core>=0.7", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 79

[tool.scikit-build]
# CMake configuration
cmake.source-dir = "src/muoblpsolvers/bindings"
cmake.build-type = "Release"
cmake.define = { PYTHON_EXECUTABLE = "python" }

# Wheel configuration
wheel.packages = ["src/muoblpsolvers"]
wheel.py-api = "cp311"  # Python 3.11 ABI

# Build configuration
build-dir = "_skbuild"

[tool.cibuildwheel]

skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686"]

test-command = "python -c 'import muoblpsolvers.mes; import muoblpsolvers.mes_add1'"
